--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(SampleFetchContent VERSION 1.0 LANGUAGES CXX)
 
 add_library(
 	SampleFetchContent
-	src/Vec2.h
+	src/Vec2.hpp
 	src/Vec2.cpp
 )
 
