--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,8 @@
 
 project(SampleFetchContent VERSION 1.0 LANGUAGES CXX)
 
-add_library(
-	SampleFetchContent
-	src/Vec2.hpp
-	src/Vec2.cpp
-)
+add_library(SampleFetchContent INTERFACE)
+target_include_directories(SampleFetchContent INTERFACE src/)
 
 set_target_properties(
   SampleFetchContent PROPERTIES
